# quicperf

./: .clang-format  .depos.cmake  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  README.md  depos.project.cmake  perf.benchmark.h  perf.cpp  perf.lsquic.h  perf.mvfst.h  perf.networking.h  perf.ngtcp2.h  perf.packet_engine.h  perf.picoquic.h  perf.picoquic_seed.c  perf.quiche.h  perf.services.h  perf.tcp.h  perf.tls.h  perf.tquic.h  perf.xquic.h
depofiles/: boost.DepoFile  boringssl.DepoFile  doubleconversion.DepoFile  fastfloat.DepoFile  fizz.DepoFile  fmt.DepoFile  folly.DepoFile  gflags.DepoFile  glog.DepoFile  libsodium.DepoFile  liburing.DepoFile  lsquic.DepoFile  mvfst.DepoFile  ngtcp2.DepoFile  openssl.DepoFile  picoquic.DepoFile  picotls.DepoFile  quiche.DepoFile  quiczig.DepoFile  tquic.DepoFile  xquic.DepoFile  zlib.DepoFile  zstd.DepoFile
docs/: latest-results.md  methodology.md  network-profile-validation.md
docs/results/datagram-fairness-20260516/: README.md  adaptive-environment.txt  adaptive-run-summary.md  adaptive-samples.tsv  datagram-smoke-raw-samples.tsv  datagram-smoke-summary.tsv  pairwise-comparisons.tsv  publication-curve.tsv  publication-results.tsv  publication-row-audit.tsv  row-stats.tsv  saturation-decisions.tsv
docs/results/full31/: publication-results.tsv  publication-row-audit.tsv  row-stats.tsv  saturation-decisions.tsv
docs/results/loopback-core-publication-20260525T213948Z/: README.md  SHA256SUMS  adaptive-run-summary.md  calibration-samples.tsv  launch.txt  pairwise-comparisons.tsv  publication-curve.tsv  publication-row-audit.tsv  saturation-decisions.tsv  workload-plan.tsv
docs/results/loopback-cubic-refresh-20260519/: README.md  adaptive-environment.txt  adaptive-run-summary.md  pairwise-comparisons.tsv  publication-curve.tsv  publication-results.tsv  publication-row-audit.tsv  rankings-by-row.tsv  rankings-overall.tsv  rankings-rank-bands.tsv  row-stats.tsv  saturation-decisions.tsv
docs/results/loopback-full-matrix-20260525T002622Z/: README.md  SHA256SUMS  adaptive-environment.txt  adaptive-run-summary.md  calibration-decisions.tsv  calibration-samples.tsv  calibration-validation-samples.tsv  launch.txt  pairwise-comparisons.tsv  publication-curve.tsv  publication-results.tsv  publication-row-audit.tsv  rankings-by-row.tsv  rankings-overall.tsv  rankings-rank-bands.tsv  row-stats.tsv  saturation-decisions.tsv  workload-plan.tsv
docs/results/loopback-full-matrix-20260525T213948Z/: README.md  SHA256SUMS  adaptive-environment.txt  calibration-decisions.tsv  calibration-validation-samples.tsv  publication-results.tsv  rankings-by-row.tsv  rankings-overall.tsv  rankings-rank-bands.tsv  row-stats.tsv
docs/results/loopback-full-matrix-20260527T052921Z/: README.md  SHA256SUMS  adaptive-environment.txt  adaptive-run-summary.md  calibration-decisions.tsv  calibration-samples.tsv  calibration-validation-samples.tsv  launch.txt  pairwise-comparisons.tsv  publication-curve.tsv  publication-results.tsv  publication-row-audit.tsv  rankings-by-row.tsv  rankings-overall.tsv  rankings-rank-bands.tsv  row-stats.tsv  saturation-decisions.tsv  workload-plan.tsv
profiles/network/: cellular-dynamics-profiles.json  cellular-switching-schedules.json  wan-profiles.json
rust-packet-ffi/: Cargo.toml
rust-packet-ffi/include/: quicperf_rust_packet_ffi.h
rust-packet-ffi/src/: lib.rs
tests/: test_network_profiles.py  test_picoperf_congestion_profile.py  test_picoquic_dynamic_cc_suite.py  test_quicperf_cellular_profiles.py  test_quicperf_network_validate.py  test_quicperf_stats_path_profile.py  test_quicperf_stats_percentiles.py  test_quicperf_stats_saturation.py  test_quicperf_window_contract.py  test_run_adaptive_config.py  test_run_adaptive_publication_suite.py
tls/: bench.cert.pem  bench.chain.pem  bench.key.pem  chain.cert.pem  client.cert.pem  client.key.pem  server.cert.pem  server.key.pem
tools/: audit-cpp-io-boundary.sh  audit-publication-run.py  combine-saturation-sweeps.py  emit-row-stats.py  quicperf_cellular_profiles.py  quicperf_network_path.py  quicperf_network_validate.py  quicperf_stats.py  render-latest-results.py  run-adaptive-publication-suite.py  run-benchmarks.sh  run-high-value-workload-smoke.sh  run-mechanism-workload-smoke.sh  run-picoquic-dynamic-cc-suite.py  run-publication-suite.py  run-saturation-sweep.py  run-tls-verify-audit.sh
zig-packet-ffi/: build.zig  build.zig.zon
zig-packet-ffi/include/: quicperf_zig_packet_ffi.h
zig-packet-ffi/src/: lib.zig
